ADD: Hero Title, Subtitle, and Banner

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
     <!-- Google Fonts and Font Awesome -->
-    <link href="https://fonts.googleapis.com/css2?family=Lobster+Two:wght@700&family=Roboto:wght@400;700&family=Unica+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Montserrat:ital,wght@0,400;0,700;1,400&family=Roboto:wght@400;700&family=Unica+One&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/db92eae0af.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -27,6 +28,26 @@
         <section class="hero">
             <img src="images/model.png" alt="" class="model-image">
         </section>
+        <!-- Hero Title Subtitle -->
+        <h1 class="hero-title">*Blessing</h1>
+        <h1 class="hero-subtitle">for every skin.</h1>
+        <p class="hero-subtitle2">YOUR MIRCALE CARE FOR PERFECT SKIN</p>
+        <!-- Hero Banner -->
+        <div class="hero-banner">
+            <div class="banner-product">
+                <h1>Bioliq*</h1>
+                <p>Bioliq is our <span class="bold">patented unique</span> component for 100% beauty</p>
+            </div>
+            <div class="banner-details">
+                <p>* First use effectiveness</p>
+                <p>ALL INGRIDENTS</p>
+            </div>
+        </div>
+        <!-- Our Story Button -->
+            <a href="#" class="our-story-button">
+                <p>Our Story</p>
+                <i class="fas fa-caret-down fa-lg hero-story-button"></i>
+            </a>
     </header> 
 </body>
 </html>
