ADD: Product Image, and design

--- a/index.html
+++ b/index.html
@@ -40,8 +40,14 @@
             </div>
             <div class="banner-details">
                 <p>* First use effectiveness</p>
-                <p>ALL INGRIDENTS</p>
+                <p>ALL INGREDIENTS</p>
             </div>
+        </div>
+        <!-- Product Image -->
+        <p class="product-ammount">15+</p>
+        <div class="product-image-container">
+            <img src="images/product.png" alt="" class="product-image">
+            <p class="product-details">DOLCE FLOR</p>
         </div>
         <!-- Our Story Button -->
             <a href="#" class="our-story-button">
